--- a/css/index.css
+++ b/css/index.css
@@ -56,8 +56,14 @@
 .c-cyan {
   color: #009FFF; }
 
+.c-red, .invalid {
+  color: #FC035E; }
+
 .c-green {
   color: #11C26F; }
+
+.c-soft-orange {
+  color: #FFB500; }
 
 .c-dark-purple {
   color: #29244E; }
@@ -87,6 +93,9 @@ b, strong {
 img {
   max-width: 100%;
   height: auto; }
+
+.light {
+  font-weight: lighter; }
 
 h1 {
   font-size: 1.5em; }
@@ -163,6 +172,12 @@ h3 {
 .f-left {
   float: left; }
 
+.f-right {
+  float: left; }
+  @media (min-width: 800px) {
+    .f-right {
+      float: right; } }
+
 .table {
   display: table; }
 
@@ -184,6 +199,9 @@ h3 {
 .c-center {
   margin: 0 auto; }
 
+.t-left {
+  text-align: left; }
+
 .t-right {
   text-align: left; }
   @media (min-width: 800px) {
@@ -192,6 +210,15 @@ h3 {
 
 .highlighted-txt p span {
   background: #FEFF7C; }
+
+.line-clamp-x1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden; }
+
+.txt-top {
+  vertical-align: text-top; }
 
 .label-wrap {
   position: relative; }
@@ -529,6 +556,9 @@ section {
     .mb40 {
       margin-bottom: 2.5em; } }
 
+.mt10 {
+  margin-top: 10px; }
+
 .mb10 {
   margin-bottom: 10px; }
 
@@ -540,6 +570,9 @@ section {
 
 .p24 {
   padding: 1.5em; }
+
+.pl20 {
+  padding-left: 20px; }
 
 .ptrl24 {
   padding: 1.5em 1.5em 0 1.5em; }
@@ -805,6 +838,16 @@ section {
   width: 100%;
   padding: 30px 20px; }
 
+.dashed-purple-opacity-btn {
+  border: 3px dashed rgba(41, 36, 78, 0.4);
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  color: rgba(41, 36, 78, 0.4);
+  text-align: center;
+  padding: 30px 20px;
+  width: 100%; }
+
 .remove-gray-btn {
   position: relative;
   text-align: left;
@@ -886,6 +929,16 @@ section {
   background: #FFB500;
   padding: 0.1em 0.9em;
   font-size: 10px; }
+
+.med-rounded-border-btn {
+  color: rgba(41, 36, 78, 0.4);
+  border: 2px solid rgba(41, 36, 78, 0.4);
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  font-weight: bold;
+  padding: 0.35em 1em;
+  font-size: 14px; }
 
 .med-rounded-btn {
   color: #FFFFFF;
@@ -985,6 +1038,13 @@ section {
   font-weight: bold;
   padding: 0 1.5em; }
 
+.right-arrow {
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-left: 14px solid #FFFFFF;
+  border-bottom: 8px solid transparent; }
+
 .up-arrow-btn {
   background: rgba(255, 255, 255, 0.4);
   -moz-border-radius: 26px;
@@ -997,9 +1057,9 @@ section {
   position: relative; }
   .up-arrow-btn:before {
     content: "";
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-bottom: 12px solid #29244E;
+    border-left: 8px solid transparent;
+    border-right: 12px solid transparent;
+    border-bottom: 8px solid #29244E;
     position: absolute;
     left: 7px;
     top: 6px; }
@@ -1423,6 +1483,7 @@ section {
     right: 0;
     width: 90%; }
 
+/* ALERTS, DROPDOWN MENUS */
 .white-tooltip-box {
   color: #000000;
   background: #FFFFFF;
@@ -1589,9 +1650,11 @@ header {
   background: #29244E;
   color: #FFFFFF;
   float: left;
-  padding: 1.25em 0;
   width: 100%;
   margin-bottom: 2.5em; }
+  header .wrap {
+    display: block;
+    overflow: hidden; }
   header a {
     color: #FFFFFF; }
   header .logo {
@@ -1600,6 +1663,7 @@ header {
   header .logo img {
     vertical-align: bottom; }
   header .breadcrumbs {
+    padding: 1.25em 0;
     display: inline-block; }
   header .breadcrumbs li {
     display: inline-block; }
@@ -1611,21 +1675,26 @@ header {
     content: ""; }
   header .breadcrumbs .down-arrow-x1-btn {
     vertical-align: text-bottom; }
-  header .nav-tools {
-    margin-top: 20px; }
   header .nav-tools li {
-    margin-right: 30px;
+    padding: 1.25em 0;
+    padding-left: 20px;
     vertical-align: middle;
     display: inline-block; }
+  header .nav-tools li:first-child {
+    padding-left: 0; }
+  header .nav-tools li:last-child {
+    margin-left: 1em; }
   header .profile-btn {
     font-weight: bold;
     color: #FFFFFF;
-    position: relative; }
+    text-align: left;
+    position: relative;
+    width: 120px; }
   header .profile-btn .bg-img {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    margin-left: 20px;
+    right: 0;
     -moz-border-radius: 40px;
     -webkit-border-radius: 40px;
     border-radius: 40px;
@@ -1638,12 +1707,42 @@ header {
     vertical-align: bottom; }
   @media (min-width: 800px) {
     header .nav-tools {
-      margin-top: 0;
       text-align: right; }
+    header .nav-tools li {
+      height: 63px; }
     header .profile-btn .bg-img {
       height: 40px;
       width: 40px;
-      top: -4px; } }
+      top: -8px; } }
+
+header.mentor-header .profile-btn {
+  width: auto; }
+header.mentor-header .profile-btn .txt {
+  padding-right: 1em;
+  position: relative;
+  top: -12px;
+  display: inline-block; }
+header.mentor-header .profile-btn .txt .name {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden; }
+header.mentor-header .profile-btn .bg-img {
+  position: relative;
+  top: -10px; }
+@media (min-width: 800px) {
+  header.mentor-header {
+    background: #FFB500; }
+    header.mentor-header .wrap {
+      background: #29244E;
+      padding-left: 1em; }
+    header.mentor-header .nav-tools li:last-child {
+      background: #FFB500; }
+    header.mentor-header .profile-btn {
+      color: #29244E;
+      width: auto; }
+    header.mentor-header .profile-btn .bg-img {
+      top: -8px; } }
 
 footer {
   position: absolute;
@@ -2134,6 +2233,101 @@ footer, .full-menu-modal .top-content {
 
 .insight-block.bg-light-red {
   border: 3px solid #FC035E; }
+
+.cohort-list table {
+  width: 100%; }
+.cohort-list table tr {
+  color: #29244E; }
+.cohort-list table td {
+  display: block;
+  padding: 10px 20px;
+  text-align: center;
+  vertical-align: middle;
+  width: 100%; }
+.cohort-list table td:first-child {
+  text-align: left; }
+.cohort-list table td .t-left {
+  text-align: center; }
+.cohort-list table tr.active {
+  background: #29244E; }
+.cohort-list table tr.active p, .cohort-list table tr.active h3, .cohort-list table tr.active h2 {
+  color: #FFFFFF !important; }
+.cohort-list table tr.active .untested {
+  color: rgba(255, 255, 255, 0.4) !important; }
+.cohort-list table tr.active .invalid {
+  color: #FC035E !important; }
+.cohort-list table tr.active .btn-cir-x1 {
+  background: #FFFFFF;
+  color: #29244E; }
+.cohort-list .c-red, .cohort-list .invalid {
+  color: #FC035E !important; }
+@media (min-width: 800px) {
+  .cohort-list table td {
+    padding: 20px;
+    display: table-cell;
+    width: 14%; }
+  .cohort-list table td .t-left {
+    text-align: left; }
+  .cohort-list table td:first-child {
+    width: 25%; } }
+
+.cohort-list.project-list table td {
+  position: relative; }
+.cohort-list.project-list table tr:first-child {
+  display: none; }
+.cohort-list.project-list table tr:first-child td {
+  vertical-align: bottom;
+  padding: 0; }
+.cohort-list.project-list .middle-line {
+  border: 1px solid rgba(41, 36, 78, 0.4);
+  display: inline-block;
+  width: 100%; }
+.cohort-list.project-list .txt {
+  display: inline-block;
+  padding-left: 20px;
+  max-width: 80%; }
+.cohort-list.project-list .btn-cir-x1 {
+  margin-top: 10px;
+  vertical-align: top;
+  display: inline-block;
+  position: relative; }
+.cohort-list.project-list .btn-cir-x1.active:after {
+  content: "";
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #8DEDCA;
+  height: 10px;
+  position: absolute;
+  top: -6px;
+  right: -6px;
+  width: 10px; }
+@media (min-width: 800px) {
+  .cohort-list.project-list table tr:first-child {
+    display: table-row; }
+  .cohort-list.project-list table td {
+    width: 14%;
+    display: table-cell; }
+  .cohort-list.project-list table td:first-child {
+    width: 30%; }
+  .cohort-list.project-list .bg-line {
+    position: relative; }
+  .cohort-list.project-list .bg-line.bg-line-x1:after {
+    content: "";
+    top: 10px;
+    position: absolute;
+    border-top: 2px solid rgba(41, 36, 78, 0.4);
+    top: 10px;
+    right: 0;
+    width: 100%; }
+  .cohort-list.project-list .bg-line.bg-line-x2:after {
+    content: "";
+    top: 10px;
+    position: absolute;
+    border-top: 2px solid rgba(41, 36, 78, 0.4);
+    top: 10px;
+    right: 48px;
+    width: 80%; } }
 
 .hypothesis-comment.blue-comment {
   background: #009FFF; }
