--- a/css/index.css
+++ b/css/index.css
@@ -801,6 +801,13 @@ section {
   vertical-align: top;
   width: 43%; }
 
+.short-half-col {
+  display: inline-block;
+  width: 100%; }
+  @media (min-width: 800px) {
+    .short-half-col {
+      width: 40%; } }
+
 .right-gutter {
   padding-right: 1.25em; }
 
@@ -839,6 +846,10 @@ section {
 /* BUTTONS BUNDLE */
 .p-btn {
   padding: 1em 1.5em; }
+
+.small-btn {
+  max-width: 90px;
+  width: 100%; }
 
 .purple-opacity-border-btn {
   border: 2px solid rgba(41, 36, 78, 0.4);
@@ -981,6 +992,15 @@ section {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   border: 3px solid #29244E; }
+
+.white-opacity-rounded-btn {
+  background: rgba(255, 255, 255, 0.4);
+  color: #FFFFFF;
+  font-weight: bold;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  padding: 6px 11px; }
 
 .bg-white-rounded-btn {
   background: #FFFFFF;
@@ -1205,6 +1225,18 @@ section {
     position: absolute;
     left: 5px;
     top: 7px; }
+
+.purple-down-arrow {
+  position: relative;
+  padding-right: 35px !important; }
+  .purple-down-arrow:before {
+    content: "";
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 9px solid #29244E;
+    position: absolute;
+    right: 11px;
+    top: 13px; }
 
 .btn-add-white-arrow {
   position: relative;
@@ -1618,8 +1650,8 @@ section {
   -webkit-border-radius: 8px;
   border-radius: 8px;
   background: rgba(41, 36, 78, 0.4);
-  height: 7px;
-  width: 7px; }
+  height: 6px;
+  width: 6px; }
 .progress-bar-dots .dot.bg-green {
   background: #11C26F !important; }
 
@@ -1657,6 +1689,16 @@ section {
     margin: 0 auto;
     right: 0;
     width: 90%; }
+
+.icon-mentor {
+  color: #FFB500;
+  margin-top: -15px;
+  position: relative; }
+  .icon-mentor img {
+    margin-left: -28px;
+    top: 12px;
+    position: relative;
+    left: -4px; }
 
 /* ALERTS, DROPDOWN MENUS */
 .white-tooltip-box {
@@ -1834,14 +1876,16 @@ header {
     color: #FFFFFF; }
   header .logo {
     display: inline-block;
-    margin-right: 1.25em; }
-  header .logo img {
-    vertical-align: bottom; }
+    margin-right: 1.25em;
+    vertical-align: top;
+    margin-top: 1.25em; }
   header .breadcrumbs {
-    padding: 1.25em 0;
-    display: inline-block; }
+    padding: 1em 0;
+    display: inline-block;
+    width: 80%; }
   header .breadcrumbs li {
-    display: inline-block; }
+    display: inline-block;
+    margin-bottom: 10px; }
   header .breadcrumbs li:after {
     content: ">";
     color: rgba(255, 255, 255, 0.4);
@@ -1850,6 +1894,8 @@ header {
     content: ""; }
   header .breadcrumbs .down-arrow-x1-btn {
     vertical-align: text-bottom; }
+  header .nav-tools img {
+    vertical-align: middle; }
   header .nav-tools li {
     padding: 1.25em 0;
     padding-left: 20px;
@@ -1884,39 +1930,46 @@ header {
     header .nav-tools {
       text-align: right; }
     header .nav-tools li {
-      height: 63px; }
+      height: 66px; }
     header .profile-btn .bg-img {
       height: 40px;
       width: 40px;
-      top: -8px; } }
+      top: -8px; }
+    header .breadcrumbs {
+      padding: 1em 0;
+      width: auto; }
+    header .breadcrumbs li {
+      margin-bottom: 0; }
+    header .logo {
+      vertical-align: middle;
+      margin-top: 0.2em; } }
 
-header.mentor-header .profile-btn {
-  padding-right: 80px;
-  width: auto; }
-header.mentor-header .profile-btn .txt {
-  padding-right: 1em;
-  position: relative;
-  top: -12px;
-  display: inline-block; }
-header.mentor-header .profile-btn .txt .name {
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden; }
-header.mentor-header .profile-btn .bg-img {
-  position: relative;
-  top: -10px; }
-@media (min-width: 800px) {
-  header.mentor-header .wrap {
-    background: #29244E;
-    padding-left: 1em; }
-  header.mentor-header .nav-tools li:last-child {
-    background: #FFB500; }
+header.mentor-header {
+  margin-bottom: 3.125em; }
   header.mentor-header .profile-btn {
-    color: #29244E;
+    padding-right: 80px;
     width: auto; }
+  header.mentor-header .profile-btn .txt {
+    padding-right: 1em;
+    position: relative;
+    top: -11px;
+    display: inline-block; }
+  header.mentor-header .profile-btn .txt .name {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden; }
   header.mentor-header .profile-btn .bg-img {
-    top: -8px; } }
+    position: relative;
+    top: -10px; }
+  @media (min-width: 800px) {
+    header.mentor-header .nav-tools li:last-child {
+      background: #FFB500; }
+    header.mentor-header .profile-btn {
+      color: #29244E;
+      width: auto; }
+    header.mentor-header .profile-btn .bg-img {
+      top: -6px; } }
 
 footer {
   position: absolute;
@@ -2664,6 +2717,48 @@ footer, .full-menu-modal .top-content {
   color: #29244E;
   display: inline-block; }
 
+.profile-details-card {
+  background: #FFFFFF;
+  display: inline-block;
+  width: 287px; }
+  .profile-details-card .top {
+    padding: 15px 20px;
+    min-height: 90px;
+    width: 100%; }
+  .profile-details-card .bottom {
+    display: inline-block;
+    padding: 30px 20px;
+    width: 100%; }
+  .profile-details-card .profile-btn {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    -moz-border-radius: 40px;
+    -webkit-border-radius: 40px;
+    border-radius: 40px;
+    height: 36px;
+    margin-right: 15px;
+    display: inline-block;
+    width: 36px; }
+  .profile-details-card .txt {
+    display: inline-block;
+    vertical-align: top;
+    width: 147px; }
+
+.profile-details-card.bg-dark-purple {
+  color: #FFFFFF; }
+  .profile-details-card.bg-dark-purple .dot {
+    background: rgba(255, 255, 255, 0.4); }
+  .profile-details-card.bg-dark-purple .top {
+    background-color: rgba(41, 36, 78, 0.8); }
+
+.profile-details-card.bg-soft-orange {
+  color: #29244E; }
+  .profile-details-card.bg-soft-orange .dot {
+    background: rgba(41, 36, 78, 0.4); }
+  .profile-details-card.bg-soft-orange .top {
+    background-color: rgba(255, 181, 0, 0.8); }
+
 .hypothesis-modal {
   position: relative;
   width: 913px;
@@ -2937,9 +3032,20 @@ ul.color-picker-list {
     padding: 0 0 50px 0; }
   .full-menu-modal .white-opacity-txt-btn {
     padding: 0.7em 1.5em; }
+  .full-menu-modal .progress-bar-wrap {
+    padding-top: 0 !important; }
   @media (max-width: 800px) {
     .full-menu-modal .top-content .table-cell {
-      text-align: center; } }
+      text-align: center; }
+    .full-menu-modal .progress-bar-wrap {
+      margin: 0 auto;
+      display: block; }
+    .full-menu-modal .progress-bar {
+      margin: 20px auto;
+      display: block; }
+    .full-menu-modal .icon-mentor {
+      text-align: center;
+      margin-bottom: 20px; } }
   @media (min-width: 800px) {
     .full-menu-modal {
       padding: 50px 50px 70px 50px; }
@@ -2963,6 +3069,7 @@ ul.color-picker-list {
   .scores-graph .col.active {
     background: #009FFF; }
   .scores-graph .col .bottom {
+    position: relative;
     border-top: 2px solid rgba(255, 255, 255, 0.4);
     color: rgba(255, 255, 255, 0.4);
     text-align: center;
@@ -2992,6 +3099,31 @@ ul.color-picker-list {
       top: 4px;
       margin-right: 3px;
       position: relative; }
+  .scores-graph .col.active-week .top p {
+    color: #29244E !important;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    background: #FFFFFF;
+    padding-bottom: 18px;
+    display: grid;
+    width: 50px;
+    line-height: 6px;
+    border-radius: 5px; }
+    .scores-graph .col.active-week .top p:before {
+      content: "" !important; }
+    .scores-graph .col.active-week .top p:after {
+      content: "";
+      background: #FFFFFF;
+      height: 30px;
+      width: 40px;
+      position: absolute;
+      top: 3px;
+      left: -9px;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      border-radius: 5px;
+      z-index: -1; }
   .scores-graph .col .top:before {
     content: "";
     position: absolute;
