--- a/css/index.css
+++ b/css/index.css
@@ -60,10 +60,10 @@
   color: #009FFF; }
 
 .c-red, .invalid {
-  color: #FC035E; }
+  color: #FC035E !important; }
 
-.c-green {
-  color: #11C26F; }
+.c-green, .new-element {
+  color: #11C26F !important; }
 
 .c-soft-orange {
   color: #FFB500; }
@@ -71,8 +71,8 @@
 .c-dark-purple {
   color: #29244E; }
 
-.c-dark-purple-opacity {
-  color: rgba(41, 36, 78, 0.4); }
+.c-dark-purple-opacity, .untested {
+  color: rgba(41, 36, 78, 0.4) !important; }
 
 .c-light-purple {
   color: #E8E5FF; }
@@ -136,6 +136,9 @@ h3 {
 .txt10 {
   font-size: 10px;
   line-height: 20px; }
+
+.lh-24px {
+  line-height: 24px; }
 
 .sans-serif {
   font-family: "Open Sans", sans-serif; }
@@ -1996,6 +1999,16 @@ footer {
     footer {
       text-align: center; } }
 
+footer.mentor-footer .progress-bar-wrap {
+  padding-top: 0; }
+footer.mentor-footer .wrap {
+  padding-top: 40px; }
+@media (max-width: 800px) {
+  footer.mentor-footer .up-arrow-btn {
+    display: block;
+    margin: 0 auto;
+    float: initial; } }
+
 footer, .full-menu-modal .top-content {
   background: #29244E;
   color: #FFFFFF;
@@ -2027,6 +2040,9 @@ footer, .full-menu-modal .top-content {
     footer .pr-100, .full-menu-modal .top-content .pr-100 {
       padding-right: 6.25em; } }
 
+.canvas-grid.canvas-full {
+  width: 100% !important; }
+
 .canvas-grid {
   width: 100%;
   display: inline-block;
@@ -2034,7 +2050,7 @@ footer, .full-menu-modal .top-content {
   font-size: 0;
   position: relative;
   color: rgba(41, 36, 78, 0.4);
-  border: 1px solid #F0F0F0;
+  border: 2px solid #F0F0F0;
   -moz-transition: ease 0.3s;
   -o-transition: ease 0.3s;
   -webkit-transition: ease 0.3s;
@@ -2079,7 +2095,6 @@ footer, .full-menu-modal .top-content {
     position: relative; }
   .canvas-grid .cell {
     position: relative;
-    border: 1px solid #F0F0F0;
     height: auto;
     width: 100%; }
   .canvas-grid .cell .dashed-blue-btn {
@@ -2136,6 +2151,8 @@ footer, .full-menu-modal .top-content {
     width: 100%; }
   .canvas-grid .listed-hypothesis.active {
     color: #29244E; }
+  .canvas-grid .listed-hypothesis.inactive {
+    opacity: 0.7; }
   .canvas-grid .listed-hypothesis:before {
     content: "";
     height: 100%;
@@ -2160,10 +2177,15 @@ footer, .full-menu-modal .top-content {
     background-color: #A1D336; }
   .canvas-grid .light-blue-tag.listed-hypothesis:before {
     background-color: #6BC7FF; }
+  @media (max-width: 800px) {
+    .canvas-grid .cell {
+      border-bottom: 2px solid #F0F0F0; }
+    .canvas-grid .col:last-child .cell {
+      border-bottom: 0; } }
   @media (min-width: 800px) {
     .canvas-grid {
       width: 90%;
-      height: 530px; }
+      height: 533px; }
       .canvas-grid .cell {
         width: 100%;
         height: 176px; }
@@ -2181,7 +2203,21 @@ footer, .full-menu-modal .top-content {
       .canvas-grid .col-x2, .canvas-grid .col-x2 .cell {
         height: 352px; }
       .canvas-grid .cell .dashed-blue-btn {
-        opacity: 0; } }
+        opacity: 0; }
+      .canvas-grid .col:nth-child(2),
+      .canvas-grid .col:nth-child(4) {
+        border-right: 2px solid #F0F0F0; }
+      .canvas-grid .col:nth-child(3),
+      .canvas-grid .col:nth-child(5) {
+        border-right: 2px solid #F0F0F0; }
+      .canvas-grid .col:nth-child(3) .cell:nth-child(1),
+      .canvas-grid .col:nth-child(5) .cell:nth-child(1) {
+        border-bottom: 2px solid #F0F0F0; }
+      .canvas-grid .col:nth-child(7) {
+        border-right: 2px solid #F0F0F0;
+        border-top: 2px solid #F0F0F0; }
+      .canvas-grid .col:nth-child(8) {
+        border-top: 2px solid #F0F0F0; } }
   @media (min-width: 1224px) {
     .canvas-grid {
       width: 822px; } }
