:wrench: Nested list

--- a/css/reset.css
+++ b/css/reset.css
@@ -98,3 +98,7 @@ input:focus:-webkit-autofill {
 a {
 	color: black;
 	text-decoration: none;}
+
+/* EXTRA */
+.nested-list ul > ul {
+	margin-left: 20px; }
